--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
 <body>
 
 <header>
-
+    <a href="#">Все котики</a>
+    <a href="#">Любимые котики</a>
 </header>
+<main>
+    <div class="img">
+        <img src="https://cdn2.thecatapi.com/images/vd.jpg" alt="img">
+        <div class="heart">
+            <img src="icons/Vector%20(1).svg" alt="img">
+        </div>
+    </div>
 
+
+
+
+</main>
 <script src="js.js"></script>
 </body>
 </html>
