--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="img">
         <img src="https://cdn2.thecatapi.com/images/vd.jpg" alt="img">
         <div class="heart">
-            <img src="icons/Vector%20(1).svg" alt="img">
+            <img src="icons/Vector.svg" alt="img">
         </div>
     </div>
 
