--- a/index.html
+++ b/index.html
@@ -21,6 +21,42 @@
             <img src="icons/Vector.svg" alt="img">
         </div>
     </div>
+    <div class="img">
+        <img src="https://cdn2.thecatapi.com/images/vd.jpg" alt="img">
+        <div class="heart">
+            <img src="icons/Vector.svg" alt="img">
+        </div>
+    </div>
+    <div class="img">
+        <img src="https://cdn2.thecatapi.com/images/vd.jpg" alt="img">
+        <div class="heart">
+            <img src="icons/Vector.svg" alt="img">
+        </div>
+    </div>
+    <div class="img">
+        <img src="https://cdn2.thecatapi.com/images/vd.jpg" alt="img">
+        <div class="heart">
+            <img src="icons/Vector.svg" alt="img">
+        </div>
+    </div>
+    <div class="img">
+        <img src="https://cdn2.thecatapi.com/images/vd.jpg" alt="img">
+        <div class="heart">
+            <img src="icons/Vector.svg" alt="img">
+        </div>
+    </div>
+    <div class="img">
+        <img src="https://cdn2.thecatapi.com/images/vd.jpg" alt="img">
+        <div class="heart">
+            <img src="icons/Vector.svg" alt="img">
+        </div>
+    </div>
+    <div class="img">
+        <img src="https://cdn2.thecatapi.com/images/vd.jpg" alt="img">
+        <div class="heart">
+            <img src="icons/Vector.svg" alt="img">
+        </div>
+    </div>
 
 
 
