--- a/index.html
+++ b/index.html
@@ -11,52 +11,11 @@
 <body>
 
 <header>
-    <a href="#">Все котики</a>
-    <a href="#">Любимые котики</a>
+    <a class="all" href="#">Все котики</a>
+    <a class="favorites" href="#">Любимые котики</a>
 </header>
 <main>
-    <div class="img">
-        <img src="https://cdn2.thecatapi.com/images/vd.jpg" alt="img">
-        <div class="heart">
-            <img src="icons/Vector.svg" alt="img">
-        </div>
-    </div>
-    <div class="img">
-        <img src="https://cdn2.thecatapi.com/images/vd.jpg" alt="img">
-        <div class="heart">
-            <img src="icons/Vector.svg" alt="img">
-        </div>
-    </div>
-    <div class="img">
-        <img src="https://cdn2.thecatapi.com/images/vd.jpg" alt="img">
-        <div class="heart">
-            <img src="icons/Vector.svg" alt="img">
-        </div>
-    </div>
-    <div class="img">
-        <img src="https://cdn2.thecatapi.com/images/vd.jpg" alt="img">
-        <div class="heart">
-            <img src="icons/Vector.svg" alt="img">
-        </div>
-    </div>
-    <div class="img">
-        <img src="https://cdn2.thecatapi.com/images/vd.jpg" alt="img">
-        <div class="heart">
-            <img src="icons/Vector.svg" alt="img">
-        </div>
-    </div>
-    <div class="img">
-        <img src="https://cdn2.thecatapi.com/images/vd.jpg" alt="img">
-        <div class="heart">
-            <img src="icons/Vector.svg" alt="img">
-        </div>
-    </div>
-    <div class="img">
-        <img src="https://cdn2.thecatapi.com/images/vd.jpg" alt="img">
-        <div class="heart">
-            <img src="icons/Vector.svg" alt="img">
-        </div>
-    </div>
+
 
 
 
