--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
 <main>
 
 
-
+    <input type="number">Limit
+    <input type="text">Page
+    <button>Load</button>
+    <button class="btn">LoadPage</button>
 
 
 </main>
-<script src="Cats.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
